--- a/dark-mode-toggle.html
+++ b/dark-mode-toggle.html
@@ -142,7 +142,7 @@
     <p class="override-dark-mode-with-color yellow">When I am in dark mode, I get darker!</p>
 
     <button type="button" class="dark-mode-btn" onclick="toggleDarkMode(); toggleBtn(this);"
-        title="Toggle Dark/Light Mode"></button><span class="dark"></span>
+        title="Toggle Dark/Light Mode"><span class="dark"></span></button>
         <script defer>
 
             // Script will toggle class "dark-mode"
