--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     &lt;p class=&quot;override-dark-mode-with-color yellow&quot;&gt;When I am in dark mode, I get darker!&lt;/p&gt;
 
     &lt;button type=&quot;button&quot; class=&quot;dark-mode-btn&quot; onclick=&quot;toggleDarkMode(); toggleBtn(this);&quot;
-        title=&quot;Toggle Dark/Light Mode&quot;&gt;&lt;span class=&quot;dark&quot;&gt;&lt;/span&gt;
+        title=&quot;Toggle Dark/Light Mode&quot;&gt;&lt;span class=&quot;dark&quot;&gt;&lt;button&gt;
         &lt;script defer&gt;
             // Script will toggle class &quot;dark-mode&quot;
             function toggleDarkMode() {
